Remove powerline symbols

--- a/tmux.conf
+++ b/tmux.conf
@@ -82,8 +82,8 @@ set -g message-style fg=colour235,bg=colour248
 set -g message-command-style bg=colour238,fg=colour222
 setw -g window-status-activity-style bg=colour235,fg=colour154
 setw -g window-status-separator ''
-set -g status-left '#[fg=colour8,bg=colour238] #S #[fg=colour238,bg=default]'
-set -g status-right '#[fg=colour240,bg=default]#[fg=colour233,bg=colour240] %r | %b %d %A #[fg=colour238,bg=colour240]#[fg=colour233,bg=colour238] #H '
+set -g status-left '#[fg=colour8,bg=colour238] #S '
+set -g status-right '#[fg=colour233,bg=colour240] %r | %b %d %A #[fg=colour233,bg=colour238] #H '
 setw -g window-status-format '#[fg=colour233,bg=colour238] #I #[fg=colour233,bg=colour240] #W '
 setw -g window-status-current-format '#[fg=colour233,bg=colour248] #I #W #F '
 
