--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,7 +18,7 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 set -g renumber-windows on
 
 # turn off naming window automatically
-setw automatic-rename off
+setw -g automatic-rename off
 
 
 
