feat: Add conky config - alter alacritty transparency - add packages.txt

--- a/Alacritty/.config/alacritty.yml
+++ b/Alacritty/.config/alacritty.yml
@@ -30,7 +30,8 @@ colors:
     cyan: "#8ec07c"
     white: "#ebdbb2"
 
-background_opacity: 0.97
+    #background_opacity: 0.97
+background_opacity: 0.92
 
 font:
   normal:
