fixed untracked files

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -87,12 +87,6 @@ set -g status-right '#[fg=colour233,bg=colour240] %r | %b %d %A #[fg=colour233,b
 setw -g window-status-format '#[fg=colour233,bg=colour238] #I #[fg=colour233,bg=colour240] #W '
 setw -g window-status-current-format '#[fg=colour233,bg=colour248] #I #W #F '
 
-
-
-
-
-
-
 # highlight current window
 # setw -g window-status-style fg=cyan,bg=colour235
 # setw -g window-status-style fg=cyan,bg=default
@@ -102,6 +96,32 @@ setw -g window-status-current-format '#[fg=colour233,bg=colour248] #I #W #F '
 # set color for active pane
 set -g pane-border-style fg=colour240,bg=black
 set -g pane-active-border-style fg=green,bg=black
+
+
+# pane navigation ================================================================================================================================================================
+
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+
+#==================================================================================================================================================================================
 
 # automatic restore
 set -g @continuum-restore 'on'
@@ -125,10 +145,11 @@ set -g @continuum-restore 'on'
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dracula/tmux'
 # Add more plugins below this line
 
 # Make navigation between tmux and vim panes seamlessly 
-set -g @plugin 'christoomey/vim-tmux-navigator'
+# set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Persist tmux sessions across computer restarts.
 set -g @plugin 'tmux-plugins/tmux-resurrect'
