--- a/lsd/.config/lsd/config.yaml
+++ b/lsd/.config/lsd/config.yaml
@@ -11,9 +11,8 @@ classic: false
 # Possible values: permission, user, group, size, size_value, date, name, inode
 blocks:
   - permission
-  - user
-  - group
   - size
+  - user
   - date
   - name
 
@@ -23,14 +22,14 @@ color:
   # When to colorize the output.
   # When "classic" is set, this is set to "never".
   # Possible values: never, auto, always
-  when: auto
+  when: always
   # How to colorize the output.
   # When "classic" is set, this is set to "no-color".
   # Possible values: default, <theme-file-name>
   # when specifying <theme-file-name>, lsd will look up theme file
   # XDG Base Directory if relative, e.g. ~/.config/lsd/themes/<theme-file-name>.yaml,
   # The file path if absolute
-  theme: default
+  theme: dracula
 
 # == Date ==
 # This specifies the date format for the date column. The freeform format
@@ -38,7 +37,7 @@ color:
 # When "classic" is set, this is set to "date".
 # Possible values: date, relative, '+<date_format>'
 # `date_format` will be a `strftime` formatted value. e.g. `date: '+%d %b %y %X'` will give you a date like this: 17 Jun 21 20:14:55
-date: date
+date: '+%d %b %Y %H:%M'
 
 # == Dereference ==
 # Whether to dereference symbolic links.
@@ -55,7 +54,7 @@ icons:
   # When to use icons.
   # When "classic" is set, this is set to "never".
   # Possible values: always, auto, never
-  when: auto
+  when: always
   # Which icon theme to use.
   # Possible values: fancy, unicode
   theme: fancy
@@ -77,7 +76,8 @@ indicators: false
 # Which layout to use. "oneline" might be a bit confusing here and should be
 # called "one-per-line". It might be changed in the future.
 # Possible values: grid, tree, oneline
-layout: grid
+#layout: grid
+layout: oneline
 
 # == Recursion ==
 recursion:
@@ -91,7 +91,7 @@ recursion:
 # == Size ==
 # Specifies the format of the size column.
 # Possible values: default, short, bytes
-size: default
+size: short
 
 # == Permission ==
 # Specify the format of the permission column
@@ -109,7 +109,7 @@ sorting:
   # Whether to group directories together and where.
   # When "classic" is set, this is set to "none".
   # Possible values: first, last, none
-  dir-grouping: none
+  dir-grouping: first
 
 # == No Symlink ==
 # Whether to omit showing symlink targets
