feat: add hlsearch and autoformatting

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -11,7 +11,8 @@
     "typescript",
     "typescriptreact",
     "go",
-    "lua"
+    "lua",
+    "python"
   ],
   "snippets.userSnippetsDirectory": "~/.config/nvim/snips",
   "explorer.width": 40,
