--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -2,6 +2,9 @@ hwdec=auto
 
 # youtube support
 script-opts=ytdl_hook-ytdl_path=/usr/bin/yt-dlp
-ytdl-format=bestvideo[height<=?1080][fps<=?60][vcodec!=?vp9]+bestaudio/best
+#ytdl-format=bestvideo[height<=?1080][fps<=?60][vcodec!=?vp9]+bestaudio/best
+ytdl-format=bestvideo[height<=?720][fps<=?60][vcodec!=?vp9]+bestaudio/best
 #ytdl-format=bestvideo+bestaudio/best
+cache=yes
+demuxer-max-bytes=200000KiB
 
