--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -45,7 +45,7 @@ shadow-offset-y = -7;
 # shadow-exclude = []
 shadow-exclude = [
   "name = 'Notification'",
-  "class_g = 'Conky'",
+  #"class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "_GTK_FRAME_EXTENTS@:c"
@@ -143,7 +143,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 0 
+corner-radius = 0
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
