feat: add read cache

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -7,4 +7,5 @@ ytdl-format=bestvideo[height<=?1080][fps<=?60][vcodec!=?vp9]+bestaudio/best
 #ytdl-format=bestvideo+bestaudio/best
 cache=yes
 demuxer-max-bytes=200000KiB
+demuxer-readahead-secs=30
 
