fix: resolve zsh issue on nvim (launching from WM) It would resolve the the fzf/node issue on nvim while launching from the awesome window manager. The zsh wasn't sourcing the .zshrc while launching nvim directly from the WM. Therefore, a sourcing script is added as a part of the command

--- a/alacritty-thinkpad/.config/alacritty/alacritty.yml
+++ b/alacritty-thinkpad/.config/alacritty/alacritty.yml
@@ -34,7 +34,7 @@ window:
   opacity: 0.95
 
 shell:
-  program: /usr/bin/zsh
+  program: /bin/zsh
 
 scrolling:
   # Maximum number of lines in the scrollback buffer.
