--- a/qutebrowser/.config/qutebrowser/autoconfig.yml
+++ b/qutebrowser/.config/qutebrowser/autoconfig.yml
@@ -6,6 +6,14 @@
 
 config_version: 2
 settings:
+  content.blocking.enabled:
+    global: false
+  content.blocking.hosts.block_subdomains:
+    global: false
   content.geolocation:
     https://where-am-i.org: false
     https://www.where-am-i.net: false
+  content.notifications.enabled:
+    https://emailanalytics.com: false
+  tabs.show:
+    global: always
