Add catppuccin for alacritty

--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,4 +1,5 @@
-import = ["/home/prakhil/.config/alacritty/dracula.toml"]
+#import = ["/home/prakhil/.config/alacritty/dracula.toml"]
+import = ["/home/prakhil/.config/alacritty/cappuccin-mocha.toml"]
 live_config_reload = true
 
 [colors]
