--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,5 +1,7 @@
 hwdec=auto
 
+ytdl-raw-options=cookies-from-browser=firefox
+
 # youtube support
 script-opts=ytdl_hook-ytdl_path=/usr/bin/yt-dlp
 #ytdl-format=bestvideo[height<=?1080][fps<=?60][vcodec!=?vp9]+bestaudio/best
