A lot of changes

--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,12 +1,9 @@
-#import = ["/home/prakhil/.config/alacritty/dracula.toml"]
-import = ["/home/prakhil/.config/alacritty/cappuccin-mocha.toml"]
-live_config_reload = true
 
 [colors]
 draw_bold_text_with_bright_colors = true
 
 [font]
-size = 16 
+size = 12 
 
 [font.glyph_offset]
 x = 0
@@ -28,7 +25,7 @@ multiplier = 10
 save_to_clipboard = true
 semantic_escape_chars = ",│`|:\"' ()[]{}<>"
 
-[shell]
+[terminal.shell]
 program = "/usr/bin/zsh"
 
 [window]
@@ -37,3 +34,10 @@ opacity = 0.99
 [window.padding]
 x = 2
 y = 2
+
+[general]
+#import = ["/home/prakhil/.config/alacritty/cappuccin-mocha.toml"]
+live_config_reload = true
+import = ["/home/prakhil/.config/alacritty/dracula.toml"]
+
+[terminal]
