--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,4 +1,4 @@
-hwdec=auto
+# hwdec=auto
 
 ytdl-raw-options=cookies-from-browser=firefox
 
@@ -11,3 +11,11 @@ cache=yes
 demuxer-max-bytes=200000KiB
 demuxer-readahead-secs=30
 
+# Ryzen laptop setup
+hwdec=no
+vo=gpu
+gpu-context=auto
+hwdec=no
+profile=high-quality
+scale=bilinear
+dscale=bilinear
