--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -26,7 +26,8 @@
   "eslint.enable": false,
   "eslint.autoFix": false,
   "eslint.autoFixOnSave": false,
-  "prettier.trailingComma": "none",
+  "prettier.trailingComma": "all",
+  "prettier.singleQuote": false,
   "javascript.suggestionActions.enabled": false,
   "languageserver": {
     "golang": {
