--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -7,9 +7,17 @@ script-opts=ytdl_hook-ytdl_path=/usr/bin/yt-dlp
 #ytdl-format=bestvideo[height<=?1080][fps<=?60][vcodec!=?vp9]+bestaudio/best
 ytdl-format=bestvideo[height<=?1080][fps<=?60][vcodec!=?vp9]+bestaudio/best
 #ytdl-format=bestvideo+bestaudio/best
+
 cache=yes
-demuxer-max-bytes=200000KiB
-demuxer-readahead-secs=30
+cache-secs=60
+cache-pause=no
+
+demuxer-max-bytes=250MiB
+demuxer-max-back-bytes=50MiB
+
+network-timeout=30
+demuxer-thread=yes
+rebase-start-time=no
 
 # Ryzen laptop setup
 hwdec=no
