Add playerctl support and improved configuration

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,29 +1,93 @@
 # hwdec=auto
 
-ytdl-raw-options=cookies-from-browser=firefox
+# ytdl-raw-options=cookies-from-browser=firefox
+# # youtube support
+# script-opts=ytdl_hook-ytdl_path=/usr/bin/yt-dlp
+# #ytdl-format=bestvideo[height<=?1080][fps<=?60][vcodec!=?vp9]+bestaudio/best
+# ytdl-format=bestvideo[height<=?1080][fps<=?60][vcodec!=?vp9]+bestaudio/best
+# #ytdl-format=bestvideo+bestaudio/best
+#
+# cache=yes
+# cache-secs=60
+# cache-pause=no
+#
+# demuxer-max-bytes=250MiB
+# demuxer-max-back-bytes=50MiB
+#
+# network-timeout=30
+# demuxer-thread=yes
+# rebase-start-time=no
 
-# youtube support
-script-opts=ytdl_hook-ytdl_path=/usr/bin/yt-dlp
-#ytdl-format=bestvideo[height<=?1080][fps<=?60][vcodec!=?vp9]+bestaudio/best
+# Ryzen laptop setup
+# hwdec=no
+# vo=gpu
+# gpu-context=auto
+# hwdec=no
+# profile=high-quality
+# scale=bilinear
+# dscale=bilinear
+
+
+# ================================
+# YouTube / yt-dlp integration
+# ================================
+
 ytdl-format=bestvideo[height<=?1080][fps<=?60][vcodec!=?vp9]+bestaudio/best
-#ytdl-format=bestvideo+bestaudio/best
+ytdl-raw-options=cookies-from-browser=firefox
+script-opts=ytdl_hook-ytdl_path=/usr/bin/yt-dlp
+
+# ================================
+# Hardware acceleration
+# ================================
+
+# You disabled hwdec (maybe due to bugs or tearing), but worth testing:
+# Uncomment the one that works best for your GPU (try `vaapi`, `vulkan`, or `auto-safe`)
+# hwdec=auto-safe
+
+# ================================
+# Video output
+# ================================
+
+vo=gpu
+gpu-context=auto
+profile=high-quality
+
+# Scaling quality
+scale=ewa_lanczossharp
+dscale=mitchell
+cscale=ewa_lanczossharp
+scale-antiring=0.7
+
+# Prevent double settings
+# Removed duplicate: hwdec=no (you already declared it once)
+
+# ================================
+# Cache / Buffering
+# ================================
 
 cache=yes
-cache-secs=60
+cache-secs=120
 cache-pause=no
 
-demuxer-max-bytes=250MiB
-demuxer-max-back-bytes=50MiB
+# Larger demuxer buffers for streaming
+demuxer-max-bytes=500MiB
+demuxer-max-back-bytes=100MiB
 
-network-timeout=30
+# More aggressive prefetching helps underruns
 demuxer-thread=yes
 rebase-start-time=no
 
-# Ryzen laptop setup
-hwdec=no
-vo=gpu
-gpu-context=auto
-hwdec=no
-profile=high-quality
-scale=bilinear
-dscale=bilinear
+# ================================
+# Audio
+# ================================
+
+# Helps with underrun issues
+autosync=30
+ao=pipewire
+
+
+# ================================
+# Network
+# ================================
+
+network-timeout=30
