config and formatting changes

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -33,7 +33,9 @@
 # ================================
 
 ytdl-format=bestvideo[height<=?1080][fps<=?60][vcodec!=?vp9]+bestaudio/best
-ytdl-raw-options=cookies-from-browser=firefox
+# ytdl-format=bestvideo[height<=?1080][fps<=?60][vcodec!=?vp9]+bestaudio/best/best
+
+# ytdl-raw-options=cookies-from-browser=firefox
 script-opts=ytdl_hook-ytdl_path=/usr/bin/yt-dlp
 
 # ================================
@@ -43,6 +45,8 @@ script-opts=ytdl_hook-ytdl_path=/usr/bin/yt-dlp
 # You disabled hwdec (maybe due to bugs or tearing), but worth testing:
 # Uncomment the one that works best for your GPU (try `vaapi`, `vulkan`, or `auto-safe`)
 # hwdec=auto-safe
+
+hwdec=no
 
 # ================================
 # Video output
@@ -57,9 +61,6 @@ scale=ewa_lanczossharp
 dscale=mitchell
 cscale=ewa_lanczossharp
 scale-antiring=0.7
-
-# Prevent double settings
-# Removed duplicate: hwdec=no (you already declared it once)
 
 # ================================
 # Cache / Buffering
