--- a/lsd/.config/lsd/config.yaml
+++ b/lsd/.config/lsd/config.yaml
@@ -29,8 +29,8 @@ color:
   # when specifying <theme-file-name>, lsd will look up theme file
   # XDG Base Directory if relative, e.g. ~/.config/lsd/themes/<theme-file-name>.yaml,
   # The file path if absolute
-  #theme: dracula
-  theme: custom
+  theme: dracula
+  # theme: catppuccin
 
 # == Date ==
 # This specifies the date format for the date column. The freeform format
